crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/cast/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 5462] Error: Invalid array length, expected integer literal or constant expression.
   ╭─[input.sol:8:13]
   │
 8 │     uint256[uint256(1)] a;
   │             ─────┬────  
   │                  ╰────── Error occurred here.
───╯

[TypeError 5462] Error: Invalid array length, expected integer literal or constant expression.
   ╭─[input.sol:9:13]
   │
 9 │     uint256[int256(2)] b;
   │             ────┬────  
   │                 ╰────── Error occurred here.
───╯
